fix: ajuste do z-index dos botões de settings e sair em resolução mobile

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -21,6 +21,11 @@ nav {
     }
 }
 
+.buttons{
+    z-index: 10;
+    position: relative;
+}
+
 .nav-link{
     font-weight: bold;
 }
